# ResumeBuilder

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  resume.py  user_interface.py
src/: main.rs  resume_builder.rs
tests/: integration_test.rs
