[tool.poetry]
name = "resumebuilder"
version = "0.1.0"
description = "Automatic Resume Builder"
authors = ["c0nD <colintiller21@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fpdf = "^1.7.2"
PyLaTeX = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
